app/assets/stylesheets/sidebar.scss
.side-bar-main-container {
  display: flex;
  flex-direction: column;
  width: 72px;
  position: fixed;
  z-index: 99;
  background-color: white;
  height: 100%;
  overflow: hidden;

  img {
    width: 18px;
    height: 18px;
    margin-bottom: 6px;
  }

  a:hover {
    background-color: rgb(235, 235, 235);
  }

  .side-bar-red {
    color: #FC0A02;
    img {
      filter: invert(29%) sepia(96%) saturate(5742%) hue-rotate(353deg) brightness(90%) contrast(122%);
    }
  }
  .side-bar-show-wider {
    width: 240px;
    flex-direction: row;
    justify-content: flex-start;
    padding: 0 24px;
    font-size: 14px;
    color: #0D0D0D;
    height: 40px;
    // transition: width 0.5s ease;
    img {
      margin-right: 24px;
      margin-bottom: 0;
    }

    
  }
}

.side-bar-main-container > a {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: 10px;
  color: #606060;
  height: 75px;
  padding: 16px 0 14px 0;
  width: 72px;
  overflow: hidden;
  box-sizing: border-box;
}

.side-bar-main-container > a:first-of-type {
  margin-top: 10px;
}

.side-bar-show-wider {
  width: 240px;
  .side-bar-red {
    background-color: rgb(226, 226, 226);
    font-weight: 500;
  }

  > div {
    height: 1px;
    border-bottom: 1px solid rgb(235, 235, 235);
  }
}

.side-bar-border-line {
  margin-top: 10px;
}

.side-bar-top {
  display: flex;
  padding-left: 16px;
  align-items: center;
  padding-top: 8px;

  .small-img {
    width: 24px;
    height: 24px;
    border-radius: 50%;
    padding: 8px;
    margin-right: 16px;
  }

  .small-img:active {
    background-color: rgb(221, 221, 221);
    filter: none;
    transition: all 0.4s ease;
  }

  .vidtube-logo {
    width: 80px;
    height: 24px;
    // margin-left: 50px;
    padding: 8px;
  }
}

.side-bar-transition-out {
  animation: slideInLeft 0.2s linear both;
}

.side-bar-transition-in {
  animation: slideInRight 0.2s ease both;
}

@keyframes slideInRight {
  from {
    // width: 0;
    transform: translate3d(-100%, 0, 0);
  }

  to {
    // width: 240px;
    transform: translate3d(0, 0, 0);
  }
}

@keyframes slideInLeft {
  from {
    // width: 0;
    transform: translate3d(0, 0, 0);
  }

  to {
    // width: 240px;
    transform: translate3d(-100%, 0, 0);
  }
}

